clusters/my-cluster/authentik/localhost-authentik-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-localhost-authentik
  namespace: authentik
spec:
  stripPrefix:
    prefixes:
      - /authentik
