clusters/my-cluster/authentik/oidc-example-localhost-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-localhost-oidc
  namespace: authentik
spec:
  stripPrefix:
    prefixes:
      - /oidc
