clusters/my-cluster/authentik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  namespace: authentik
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: authentik.kosumi.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
