clusters/my-cluster/authentik/oidc-example-localhost-oauth2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oidc-example-localhost-oauth2
  namespace: authentik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: localhost
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oidc-example
                port:
                  number: 80
